--- a/Quiz App/public/pages/signup.html
+++ b/Quiz App/public/pages/signup.html
@@ -21,7 +21,7 @@
 
 
 
-    <title class="text-white fw-bold">Sign in.</title>
+    <title class="text-white fw-bold">Sign Up.</title>
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -48,17 +48,18 @@
             <div class="col-md-4 col-sm-12 shadow rounded " style=" margin-top: 10%; background-color: #272640;">
 
                 <main class="form-signin">
-                    <form id="signIn">
-                        <h1 class="h3 my-3 fw-normal text-secondary fw-bold ">Please sign in</h1>
+                    <form id="formsubmit">
+                        <h1 class="h3 my-3 fw-normal text-secondary fw-bold ">Please sign up</h1>
 
                         <div class="form-floating">
-                            <input type="email" class="form-control my-2" id="emails" style="box-shadow: none;" placeholder="name@example.com">
-                            <label for="emails">Email address</label>
+                            <input type="email" class="form-control my-2" id="email" style="box-shadow: none;" placeholder="name@example.com">
+                            <label for="email">Email address</label>
                         </div>
+
                         <div id=" emails" class="text-danger" style="font-size: 12px;"></div>
                         <div class="form-floating">
-                            <input type="password" class="form-control my-2" style="box-shadow: none;" id="passwords" placeholder="Password">
-                            <label for="passwords">Password</label>
+                            <input type="password" class="form-control my-2" style="box-shadow: none;" id="password" placeholder="Password">
+                            <label for="password">Password</label>
                         </div>
                         <div id="pass" class="text-danger" style="font-size: 12px;"></div>
 
@@ -67,11 +68,11 @@
                             <input type="checkbox" value="remember-me"> Remember me
                         </label>
                         </div>
-                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
                         <div class="text-white py-2 fs-6">
 
-                            <div>New around here? <span onclick="location.assign('pages/signup.html')" class="btn btn-success">Sign up</span> </div>
-                            <div onclick="forger()" class="px-2">Forgot password?</div>
+                            <div>You are already signup <span onclick="location.assign('../index.html')" class="btn btn-success">Sign In</span> </div>
+                            <!-- <div onclick="forger()" class="px-2">Forgot password?</div> -->
                         </div>
 
                         <p class="mt-5 mb-3 text-muted">© 2020-2024</p>
@@ -95,7 +96,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="module" src="pages/signin.js"></script>
+    <script type="module" src="signup.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
